bobcat (5.06.01)

  * Extended the facilities of CSVTable

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 11 Dec 2020 15:16:31 +0100

bobcat (5.06.00)

  * Added the class CSVTable constructing tables row-by-row

  * Added the move constructor and the move assignment operator to BigInt

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 07 Dec 2020 20:10:31 +0100

bobcat (5.05.00)

  * Redefined FBB::binary_search, and updated its man-page

  * Added the class FBB::Config, deprecating FBB::ConfigFile.

  * Added the class template FBB::Field allowing retrieval and modifications
    of offset-based fields in numeric values of configurable number systems.

  * Added descriptions of the members Arg::LongOption::longName and
    Arg::LongOption::optionChar to the FBB::Arg man-page
    
  * Fixed a bug in DateTime that broke rfc2822() and rfc3329() when DST was
    acitve. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 23 May 2020 15:25:17 +0200

bobcat (5.04.01)

  * Stupid mistake: forgot to remove the Process header file included
    ../pipe/pipe

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 04 Mar 2020 14:39:28 +0100

bobcat (5.04.00)

  * The Stat and Glob classes received new members and constructors allowing
    its objects to distinguish file types (like regular files and symbolic
    links) that cannot be distinguished when merely applying the `bitor'
    operator to their Type values. Their man-pages were updated accordingly.

  * The build-scripts (in the <classname>/driver directories) use the C++
    standard that is defined int the file ./c++std

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 03 Mar 2020 21:28:54 +0100

bobcat (5.03.00)

  * Simplfied the  PerlSetFSA s_stateTransitions FSA used by Pattern to a mere
    five states.

  * Updated the Stat, Pipe, and Process man-pages.

  * Pipe has several new members (e.g., for closing pipes); its d_fd array of
    file descriptors is now a private data member.
