@@ -1,3 +1,3 @@
-VERSION=5.06.01
+VERSION=5.06.02
 YEARS=2005-2020
 
