@@ -140,11 +140,15 @@ manpagesection(OVERLOADED OPERATOR)
 
 manpagesection(NON-STATIC MEMBER FUNCTIONS)
     itemization(
-    itb(char const **argPointers())
+    itb(char const **argPointers() const)
        Returns tt(argv)-like set of pointers to all remaining arguments. The
         last element is guaranteed to be a 0-pointer. The first tt(nArg())
         elements point to the respective values of the NTBS arguments that
         were passed to the program.
+
+       The caller is responsible for returning the array of pointers to the
+        common pool, but should not delete the C-strings to which the pointers
+        point.
 
     itb(std::string const &basename() const)
         Returns the program's basename.
@@ -248,13 +252,16 @@ manpagesection(NON-STATIC MEMBER FUNCTIONS)
     itb(void versionHelp(void (*usage)(std::string const &progname), 
         char const *version, size_t minArgs, int helpFlag = 'h', 
         int versionFlag = 'v') const)
-       If tt(versionFlag) was specified, and the tt(helpFlag) was not
-        specified the program's name (using bf(basename())) and tt(version) is
-        displayed to tt(std::cout). Otherwise, if the tt(helpFlag) was
-        provided or if there are fewer arguments than tt(minArgs) tt(usage())
-        is called with argument bf(basename()). If either version- or help
-        information is shown, the bf(int) value 1 is thrown as an
-        exception.nl() 
+       If the tt(helpFlag) was specified tt(usage()) is called with
+        argument bf(basename()) whereafter the program throws tt(int 0).
+
+       If tt(versionFlag) was specified the program's name (using basename())
+        and version is displayed to tt(std::cout) whereafter the program
+        throws tt(int 0).
+
+       If there are fewer arguments than tt(minArgs) tt(usage()) is called with
+        argument bf(basename()) and the program ends with exit value 1.
+
        Note that tt(versionhelp) compares tt(minArgs) against tt(nArgs). If
         tt(minArgs) should be compaired against the number of arguments up to
         a possible `--' argument (i.e., tt(beyondDashes)' return value), then
